qt/gen_qsplitter.h

typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSplitter QSplitter;
typedef struct QSplitterHandle QSplitterHandle;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
bool QSplitter_override_virtual_dragEnterEvent(void* self, intptr_t slot);
bool QSplitter_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QSplitter_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QSplitter_override_virtual_dropEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QSplitter_override_virtual_showEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_showEvent(void* self, QShowEvent* event);
bool QSplitter_override_virtual_hideEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QSplitter_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QSplitter_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QSplitter_override_virtual_metric(void* self, intptr_t slot);
int QSplitter_virtualbase_metric(const void* self, int param1);
bool QSplitter_override_virtual_initPainter(void* self, intptr_t slot);
void QSplitter_virtualbase_initPainter(const void* self, QPainter* painter);
bool QSplitter_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QSplitter_virtualbase_redirected(const void* self, QPoint* offset);
bool QSplitter_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QSplitter_virtualbase_sharedPainter(const void* self);
bool QSplitter_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QSplitter_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QSplitter_virtualbase_inputMethodQuery(const void* self, int param1);
bool QSplitter_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QSplitter_virtualbase_focusNextPrevChild(void* self, bool next);
bool QSplitter_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSplitter_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSplitter_override_virtual_timerEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSplitter_override_virtual_customEvent(void* self, intptr_t slot);
void QSplitter_virtualbase_customEvent(void* self, QEvent* event);
bool QSplitter_override_virtual_connectNotify(void* self, intptr_t slot);
void QSplitter_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSplitter_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSplitter_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSplitter_staticMetaObject();
void QSplitter_delete(QSplitter* self);
QSplitterHandle* QSplitterHandle_new(int o, QSplitter* parent);
QMetaObject* QSplitterHandle_metaObject(const QSplitterHandle* self);
void* QSplitterHandle_metacast(QSplitterHandle* self, const char* param1);
int QSplitterHandle_metacall(QSplitterHandle* self, int param1, int param2, void** param3);
struct miqt_string QSplitterHandle_tr(const char* s);
struct miqt_string QSplitterHandle_trUtf8(const char* s);
void QSplitterHandle_setOrientation(QSplitterHandle* self, int o);
int QSplitterHandle_orientation(const QSplitterHandle* self);
bool QSplitterHandle_opaqueResize(const QSplitterHandle* self);
QSplitter* QSplitterHandle_splitter(const QSplitterHandle* self);
QSize* QSplitterHandle_sizeHint(const QSplitterHandle* self);
struct miqt_string QSplitterHandle_tr2(const char* s, const char* c);
struct miqt_string QSplitterHandle_tr3(const char* s, const char* c, int n);
struct miqt_string QSplitterHandle_trUtf82(const char* s, const char* c);
struct miqt_string QSplitterHandle_trUtf83(const char* s, const char* c, int n);
bool QSplitterHandle_override_virtual_metacall(void* self, intptr_t slot);
int QSplitterHandle_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSplitterHandle_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QSplitterHandle_virtualbase_sizeHint(const void* self);
bool QSplitterHandle_override_virtual_paintEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QSplitterHandle_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QSplitterHandle_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QSplitterHandle_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QSplitterHandle_override_virtual_resizeEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QSplitterHandle_override_virtual_event(void* self, intptr_t slot);
bool QSplitterHandle_virtualbase_event(void* self, QEvent* param1);
bool QSplitterHandle_override_virtual_devType(void* self, intptr_t slot);
int QSplitterHandle_virtualbase_devType(const void* self);
bool QSplitterHandle_override_virtual_setVisible(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_setVisible(void* self, bool visible);
bool QSplitterHandle_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QSplitterHandle_virtualbase_minimumSizeHint(const void* self);
bool QSplitterHandle_override_virtual_heightForWidth(void* self, intptr_t slot);
int QSplitterHandle_virtualbase_heightForWidth(const void* self, int param1);
bool QSplitterHandle_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QSplitterHandle_virtualbase_hasHeightForWidth(const void* self);
bool QSplitterHandle_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QSplitterHandle_virtualbase_paintEngine(const void* self);
bool QSplitterHandle_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QSplitterHandle_override_virtual_wheelEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QSplitterHandle_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QSplitterHandle_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QSplitterHandle_override_virtual_focusInEvent(void* self, intptr_t slot);
void QSplitterHandle_virtualbase_focusInEvent(void* self, QFocusEvent* event);