qt/gen_qsplitter.nim

proc fcQSplitter_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_dragEnterEvent".}
proc fQSplitter_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_dragMoveEvent".}
proc fcQSplitter_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_dragMoveEvent".}
proc fQSplitter_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_dragLeaveEvent".}
proc fcQSplitter_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_dragLeaveEvent".}
proc fQSplitter_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_dropEvent".}
proc fcQSplitter_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_dropEvent".}
proc fQSplitter_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_showEvent".}
proc fcQSplitter_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_showEvent".}
proc fQSplitter_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_hideEvent".}
proc fcQSplitter_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_hideEvent".}
proc fQSplitter_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QSplitter_virtualbase_nativeEvent".}
proc fcQSplitter_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_nativeEvent".}
proc fQSplitter_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QSplitter_virtualbase_metric".}
proc fcQSplitter_override_virtual_metric(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_metric".}
proc fQSplitter_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QSplitter_virtualbase_initPainter".}
proc fcQSplitter_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_initPainter".}
proc fQSplitter_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QSplitter_virtualbase_redirected".}
proc fcQSplitter_override_virtual_redirected(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_redirected".}
proc fQSplitter_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QSplitter_virtualbase_sharedPainter".}
proc fcQSplitter_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_sharedPainter".}
proc fQSplitter_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QSplitter_virtualbase_inputMethodEvent".}
proc fcQSplitter_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_inputMethodEvent".}
proc fQSplitter_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QSplitter_virtualbase_inputMethodQuery".}
proc fcQSplitter_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_inputMethodQuery".}
proc fQSplitter_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QSplitter_virtualbase_focusNextPrevChild".}
proc fcQSplitter_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_focusNextPrevChild".}
proc fQSplitter_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSplitter_virtualbase_eventFilter".}
proc fcQSplitter_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_eventFilter".}
proc fQSplitter_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_timerEvent".}
proc fcQSplitter_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_timerEvent".}
proc fQSplitter_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSplitter_virtualbase_customEvent".}
proc fcQSplitter_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_customEvent".}
proc fQSplitter_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSplitter_virtualbase_connectNotify".}
proc fcQSplitter_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_connectNotify".}
proc fQSplitter_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSplitter_virtualbase_disconnectNotify".}
proc fcQSplitter_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSplitter_override_virtual_disconnectNotify".}
proc fcQSplitter_staticMetaObject(): pointer {.importc: "QSplitter_staticMetaObject".}
proc fcQSplitter_delete(self: pointer) {.importc: "QSplitter_delete".}
proc fcQSplitterHandle_new(o: cint, parent: pointer): ptr cQSplitterHandle {.importc: "QSplitterHandle_new".}
proc fcQSplitterHandle_metaObject(self: pointer, ): pointer {.importc: "QSplitterHandle_metaObject".}
proc fcQSplitterHandle_metacast(self: pointer, param1: cstring): pointer {.importc: "QSplitterHandle_metacast".}
proc fcQSplitterHandle_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSplitterHandle_metacall".}
proc fcQSplitterHandle_tr(s: cstring): struct_miqt_string {.importc: "QSplitterHandle_tr".}
proc fcQSplitterHandle_trUtf8(s: cstring): struct_miqt_string {.importc: "QSplitterHandle_trUtf8".}
proc fcQSplitterHandle_setOrientation(self: pointer, o: cint): void {.importc: "QSplitterHandle_setOrientation".}
proc fcQSplitterHandle_orientation(self: pointer, ): cint {.importc: "QSplitterHandle_orientation".}
proc fcQSplitterHandle_opaqueResize(self: pointer, ): bool {.importc: "QSplitterHandle_opaqueResize".}
proc fcQSplitterHandle_splitter(self: pointer, ): pointer {.importc: "QSplitterHandle_splitter".}
proc fcQSplitterHandle_sizeHint(self: pointer, ): pointer {.importc: "QSplitterHandle_sizeHint".}
proc fcQSplitterHandle_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSplitterHandle_tr2".}
proc fcQSplitterHandle_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSplitterHandle_tr3".}
proc fcQSplitterHandle_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSplitterHandle_trUtf82".}
proc fcQSplitterHandle_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSplitterHandle_trUtf83".}
proc fQSplitterHandle_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSplitterHandle_virtualbase_metacall".}
proc fcQSplitterHandle_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_metacall".}
proc fQSplitterHandle_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QSplitterHandle_virtualbase_sizeHint".}
proc fcQSplitterHandle_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_sizeHint".}
proc fQSplitterHandle_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_paintEvent".}
proc fcQSplitterHandle_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_paintEvent".}
proc fQSplitterHandle_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_mouseMoveEvent".}
proc fcQSplitterHandle_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_mouseMoveEvent".}
proc fQSplitterHandle_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_mousePressEvent".}
proc fcQSplitterHandle_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_mousePressEvent".}
proc fQSplitterHandle_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_mouseReleaseEvent".}
proc fcQSplitterHandle_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_mouseReleaseEvent".}
proc fQSplitterHandle_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QSplitterHandle_virtualbase_resizeEvent".}
proc fcQSplitterHandle_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_resizeEvent".}
proc fQSplitterHandle_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QSplitterHandle_virtualbase_event".}
proc fcQSplitterHandle_override_virtual_event(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_event".}
proc fQSplitterHandle_virtualbase_devType(self: pointer, ): cint{.importc: "QSplitterHandle_virtualbase_devType".}
proc fcQSplitterHandle_override_virtual_devType(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_devType".}
proc fQSplitterHandle_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QSplitterHandle_virtualbase_setVisible".}
proc fcQSplitterHandle_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_setVisible".}
proc fQSplitterHandle_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QSplitterHandle_virtualbase_minimumSizeHint".}
proc fcQSplitterHandle_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_minimumSizeHint".}
proc fQSplitterHandle_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QSplitterHandle_virtualbase_heightForWidth".}
proc fcQSplitterHandle_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_heightForWidth".}
proc fQSplitterHandle_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QSplitterHandle_virtualbase_hasHeightForWidth".}
proc fcQSplitterHandle_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_hasHeightForWidth".}
proc fQSplitterHandle_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QSplitterHandle_virtualbase_paintEngine".}
proc fcQSplitterHandle_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_paintEngine".}
proc fQSplitterHandle_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_mouseDoubleClickEvent".}
proc fcQSplitterHandle_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_mouseDoubleClickEvent".}
proc fQSplitterHandle_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_wheelEvent".}
proc fcQSplitterHandle_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_wheelEvent".}
proc fQSplitterHandle_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_keyPressEvent".}
proc fcQSplitterHandle_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_keyPressEvent".}
proc fQSplitterHandle_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_keyReleaseEvent".}
proc fcQSplitterHandle_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_keyReleaseEvent".}
proc fQSplitterHandle_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QSplitterHandle_virtualbase_focusInEvent".}
proc fcQSplitterHandle_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QSplitterHandle_override_virtual_focusInEvent".}
